--- a/index.html
+++ b/index.html
@@ -5,26 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Portfolio website of Animesh Rawat. A summary of professional experience, 
-      skills, projects details and contact information."
+      content="Alireza Ghorbani"
     />
-    <title>Animesh Rawat - Portfolio</title>
+    <title>Alireza Ghorbani - Portfolio</title>
 
     <!--==================== OPEN GRAPH META TAGS ===================== -->
-    <meta property="og:title" content="Animesh Rawat - Portfolio" />
+    <meta property="og:title" content="Alireza Ghorbani" />
     <meta property="og:image" content="/assets/img/PwaImages/ios/512.png" />
     <meta
       property="og:description"
-      content="Portfolio website of Animesh Rawat. A summary of professional experience, 
-      skills, projects details and contact information."
+      content="Alireza Ghorbani"
     />
 
     <!--==================== TWITTER META TAGS ===================== -->
-    <meta name="twitter:title" content="Animesh Rawat - Portfolio" />
+    <meta name="twitter:title" content="Alireza Ghorbani" />
     <meta
       name="twitter:description"
-      content="Portfolio website of Animesh Rawat. A summary of professional experience, 
-      skills, projects details and contact information."
+      content="Alireza Ghorbani"
     />
     <meta name="twitter:image" content="/assets/img/PwaImages/ios/512.png" />
 
@@ -89,7 +86,7 @@
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
       <nav class="nav container">
-        <a href="#" class="nav__logo noSelect">Animesh Rawat</a>
+        <a href="#" class="nav__logo noSelect">Alireza Ghorbani</a>
 
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list grid">
@@ -100,26 +97,14 @@
             </li>
 
             <li class="nav__item">
-              <a href="#about" class="nav__link noSelect">
-                <i class="uil uil-user nav__icon"></i> About
-              </a>
-            </li>
-
-            <li class="nav__item">
               <a href="#skills" class="nav__link noSelect">
-                <i class="uil uil-file-alt nav__icon"></i> Skills
-              </a>
-            </li>
-
-            <li class="nav__item">
-              <a href="#services" class="nav__link noSelect">
-                <i class="uil uil-briefcase-alt nav__icon"></i> Services
+                <i class="uil uil-file-alt nav__icon"></i> Research
               </a>
             </li>
 
             <li class="nav__item">
               <a href="#portfolio" class="nav__link noSelect">
-                <i class="uil uil-scenery nav__icon"></i> Portfolio
+                <i class="uil uil-scenery nav__icon"></i> Teaching
               </a>
             </li>
 
@@ -152,26 +137,20 @@
           <div class="home__content grid">
             <div class="home__social">
               <a
-                href="https://www.linkedin.com/in/rawatanimesh/"
+                href="https://www.linkedin.com/in/ghorbanialireza/"
                 target="_blank"
                 class="home__social-icon"
               >
                 <i class="uil uil-linkedin-alt"></i>
               </a>
               <a
-                href="https://github.com/rawatanimesh"
+                href="https://github.com/ghorbani-alireza"
                 target="_blank"
                 class="home__social-icon"
               >
                 <i class="uil uil-github-alt"></i>
               </a>
-              <a
-                href="https://t.me/rawatanimesh"
-                target="_blank"
-                class="home__social-icon"
-              >
-                <i class="uil uil-telegram-alt"></i>
-              </a>
+              
             </div>
 
             <div class="home__img">
@@ -206,24 +185,12 @@
             </div>
 
             <div class="home__data">
-              <h1 class="home__title">Hi, I am Animesh</h1>
-              <h3 class="home__subtitle">Web Developer</h3>
+              <h1 class="home__title">Alireza Ghorbani</h1>
+              <h3 class="home__subtitle">Statistics | Epidemiology</h3>
               <p class="home__description">
-                I have a passion for building intuitive, user-friendly
-                interfaces that provide an enjoyable and seamless user
-                experience.
+                I have a ...
               </p>
-              <a href="#contact" class="button button--flex">
-                Contact Me<i class="uil uil-message button__icon"></i>
-              </a>
             </div>
-          </div>
-          <div class="home__scroll">
-            <a href="#about" class="home__scroll-button button--flex">
-              <i class="uil uil-mouse-alt home__scroll-mouse"></i>
-              <span class="home__scroll-name">Scroll Down</span>
-              <i class="uil uil-arrow-down home__scroll-arrow"></i>
-            </a>
           </div>
         </div>
       </section>
