--- a/index.html
+++ b/index.html
@@ -150,7 +150,21 @@
               >
                 <i class="uil uil-github-alt"></i>
               </a>
-              
+              <a
+                href="https://scholar.google.com/citations?user=RoWUdywAAAAJ&hl=en"
+                target="_blank"
+                class="home__social-icon"
+              >
+                <i class="uil uil-google-scholar"></i>
+              </a>
+
+              <a
+                href="https://www.researchgate.net/profile/Alireza-Ghorbani-3"
+                target="_blank"
+                class="home__social-icon"
+              >
+                <i class="uil uil-researchgate"></i>
+              </a>
             </div>
 
             <div class="home__img">
