--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
             </li>
 
             <li class="nav__item">
-              <a href="#skills" class="nav__link noSelect">
+              <a href="#research" class="nav__link noSelect">
                 <i class="uil uil-file-alt nav__icon"></i> Research
               </a>
             </li>
 
             <li class="nav__item">
-              <a href="#portfolio" class="nav__link noSelect">
+              <a href="#teaching" class="nav__link noSelect">
                 <i class="uil uil-scenery nav__icon"></i> Teaching
               </a>
             </li>
@@ -272,9 +272,9 @@
       </div>
     </section>
 
-    <!--==================== SKILLS ====================-->
+    <!--==================== Research ====================-->
 
-    <section class="skills section" id="skills">
+    <section class="research section" id="research">
       <h2 class="section__title">Skills</h2>
       <span class="section__subtitle">My tech stack</span>
       <div class="skills__container container grid">
@@ -501,108 +501,16 @@
       </div>
     </section>
 
-    <!--==================== SERVICES ====================-->
+    <!--==================== Teaching ====================-->
 
-    <section class="services section" id="services">
-      <h2 class="section__title">Services</h2>
-      <span class="section__subtitle">What I offer</span>
-
-      <div class="services__container container grid">
-        <!--==================== SERVICE 1 ====================-->
-        <div class="services__content">
-          <div>
-            <i class="uil uil-arrow services__icon"></i>
-            <h3 class="services__title">Web<br />Developer</h3>
-          </div>
-
-          <span
-            class="button button--flex button--small button--link services__button"
-          >
-            View More
-            <i class="uil uil-arrow-right button__icon"></i>
-          </span>
-
-          <div class="services__modal">
-            <div class="services__modal-content">
-              <h4 class="services__modal-title">Web<br />Developer</h4>
-              <i class="uil uil-times services__modal-close"></i>
-              <ul class="services__modal-services grid">
-                <li class="services__modal-service">
-                  <i class="uil uil-check-circle services__modal-icon"></i>
-                  <p>
-                    I develop web applications with end to end solutions for
-                    frontend and backend
-                  </p>
-                </li>
-                <li class="services__modal-service">
-                  <i class="uil uil-check-circle services__modal-icon"></i>
-                  <p>I handle website deployment</p>
-                </li>
-                <li class="services__modal-service">
-                  <i class="uil uil-check-circle services__modal-icon"></i>
-                  <p>I optimize website performance</p>
-                </li>
-                <li class="services__modal-service">
-                  <i class="uil uil-check-circle services__modal-icon"></i>
-                  <p>I help in webiste SEO optimization</p>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
-        <!--==================== SERVICE 2 ====================-->
-        <div class="services__content">
-          <div>
-            <i class="uil uil-mobile-android services__icon"></i>
-            <h3 class="services__title">Hybrid App<br />Developer</h3>
-          </div>
-
-          <span
-            class="button button--flex button--small button--link services__button"
-          >
-            View More
-            <i class="uil uil-arrow-right button__icon"></i>
-          </span>
-
-          <div class="services__modal">
-            <div class="services__modal-content">
-              <h4 class="services__modal-title">Hybrid App<br />Developer</h4>
-              <i class="uil uil-times services__modal-close"></i>
-              <ul class="services__modal-services grid">
-                <li class="services__modal-service">
-                  <i class="uil uil-check-circle services__modal-icon"></i>
-                  <p>I develop hybrid mobile apps</p>
-                </li>
-                <li class="services__modal-service">
-                  <i class="uil uil-check-circle services__modal-icon"></i>
-                  <p>I create apps for mobile and tablets</p>
-                </li>
-                <li class="services__modal-service">
-                  <i class="uil uil-check-circle services__modal-icon"></i>
-                  <p>I handle cross platform compatibility</p>
-                </li>
-                <li class="services__modal-service">
-                  <i class="uil uil-check-circle services__modal-icon"></i>
-                  <p>I optimize application performances</p>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!--==================== PORTFOLIO ====================-->
-
-    <section class="portfolio section" id="portfolio">
+    <section class="teaching section" id="teaching">
       <h2 class="section__title">Portfolio</h2>
       <span class="section__subtitle">Most recent work</span>
 
-      <div class="portfolio__container container swiper-container">
+      <div class="teaching__container container swiper-container">
         <div class="swiper-wrapper">
           <!--==================== PORTFOLIO 1====================-->
-          <div class="portfolio__content grid swiper-slide">
+          <div class="teaching__content grid swiper-slide">
             <img
               src="/assets/img/portfolio/unichat.PNG"
               alt=""
@@ -710,28 +618,6 @@
       </div>
     </section>
 
-    <!--==================== PROJECT IN MIND ====================-->
-
-    <section class="project section">
-      <div class="project__bg">
-        <div class="project__container container grid">
-          <div class="project__data">
-            <h2 class="project__title">You have a new project ?</h2>
-            <p class="project__description">
-              I would love to chat with you about your project and see how we
-              can work together to create something truly amazing. Let's
-              connect.
-            </p>
-            <a href="#contact" class="button button--flex button--white">
-              Contact Me
-              <i class="uil uil-message project__icon button__icon"></i>
-            </a>
-          </div>
-
-          <img src="/assets/img/travel-pic3.png" alt="" class="project__img" />
-        </div>
-      </div>
-    </section>
 
     <!--==================== CONTACT ME ====================-->
 
