--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
               href="assets/pdf/CV.pdf"
               class="button button--flex"
             >
-              Download Resume<i class="uil uil-download-alt button__icon"></i
+              CV<i class="uil uil-download-alt button__icon"></i
             ></a>
           </div>
         </div>
