--- a/index.html
+++ b/index.html
@@ -216,8 +216,7 @@
       <h2 class="section__title">About Me</h2>
       <span class="section__subtitle">My Introduction</span>
 
-      <div class="about__container container grid">
-        <img src="assets/img/mt-fuji.jpg" alt="" class="about__image" />
+      <div class="about__container container">
 
         <div class="about__data">
           <p class="about__description">
@@ -240,7 +239,7 @@
               href="assets/pdf/CV.pdf"
               class="button button--flex"
             >
-              CV<i class="uil uil-download-alt button__icon"></i
+              Download CV<i class="uil uil-download-alt button__icon"></i
             ></a>
           </div>
         </div>
