--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
 
             <div>
               <h3 class="contact__title">Call Me</h3>
-              <span class="contact__subtitle">+91 7838436141</span>
+              <span class="contact__subtitle">+49 (537) 537-5139</span>
             </div>
           </div>
 
@@ -620,7 +620,7 @@
 
             <div>
               <h3 class="contact__title">Email</h3>
-              <span class="contact__subtitle">animesh.rawat20@gmail.com</span>
+              <span class="contact__subtitle">alireza.ghorbani@campus.lmu.de</span>
             </div>
           </div>
 
@@ -629,7 +629,7 @@
 
             <div>
               <h3 class="contact__title">Location</h3>
-              <span class="contact__subtitle">Noida, India</span>
+              <span class="contact__subtitle">Muncih, Germany</span>
             </div>
           </div>
         </div>
@@ -677,16 +677,16 @@
       <div class="footer__bg">
         <div class="footer__container container grid">
           <div>
-            <h1 class="footer__title">Animesh</h1>
-            <span class="footer__subtitle">Web Developer</span>
+            <h1 class="footer__title">Alireza Ghorbani</h1>
+            <span class="footer__subtitle">LMU Munich</span>
           </div>
 
           <ul class="footer__links">
             <li>
-              <a href="#services" class="footer__link">Services</a>
+              <a href="#research" class="footer__link">Research</a>
             </li>
             <li>
-              <a href="#portfolio" class="footer__link">Portfolio</a>
+              <a href="#teaching" class="footer__link">Teaching</a>
             </li>
             <li>
               <a href="#contact" class="footer__link">Contact Me</a>
@@ -695,27 +695,35 @@
 
           <div class="footer__socials">
             <a
-              href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2Frawatanimesh"
+              href="https://www.linkedin.com/in/ghorbanialireza/"
               target="_blank"
               class="footer__social"
             >
-              <i class="uil uil-facebook-f"></i>
+              <i class="uil uil-linkedin-alt"></i>
             </a>
 
             <a
-              href="https://www.instagram.com/rawatanimesh/?hl=en"
+              href="https://github.com/ghorbani-alireza"
               target="_blank"
               class="footer__social"
             >
-              <i class="uil uil-instagram"></i>
+              <i class="uil uil-github-alt"></i>
             </a>
 
             <a
-              href="https://twitter.com/rawataniimesh?lang=en"
+              href="https://scholar.google.com/citations?user=RoWUdywAAAAJ&hl=en"
               target="_blank"
               class="footer__social"
             >
-              <i class="uil uil-twitter-alt"></i>
+              <i class="uil uil-google-scholar"></i>
+            </a>
+
+            <a
+              href="https://www.researchgate.net/profile/Alireza-Ghorbani-3"
+              target="_blank"
+              class="footer__social"
+            >
+              <i class="uil uil-researchgate"></i>
             </a>
           </div>
         </div>
