--- a/index.html
+++ b/index.html
@@ -418,6 +418,59 @@
               </div>
             </div>
 
+          <!--==================== QUALIFICATOIN CONTENT 1====================-->
+          <div
+            class="qualification__content qualification__active"
+            data-content
+            id="work2"
+          >
+            <!--==================== QUALIFICATOIN 1====================-->
+            <div class="qualification__data">
+              <div>
+                <h3 class="qualification__title">Data Science Senior Specialist</h3>
+                <span class="qualification__subtitle"> Zarrin Roya </span>
+                <div class="qualification__calender">
+                  <i class="uil uil-calendar-alt"></i> 2023-2024
+                </div>
+              </div>
+
+              <div>
+                <span class="qualification__rounder"></span>
+                <span class="qualification__line"></span>
+              </div>
+            </div>
+
+            <!--==================== QUALIFICATOIN 2====================-->
+            <div class="qualification__data">
+              <div></div>
+              <div>
+                <span class="qualification__rounder"></span>
+                <span class="qualification__line"></span>
+              </div>
+              <div>
+                <h3 class="qualification__title">Statistics & Machine Learning Instructor</h3>
+                <span class="qualification__subtitle"> learnix.ir </span>
+                <div class="qualification__calender">
+                  <i class="uil uil-calendar-alt"></i> 2022-2023
+                </div>
+              </div>
+            </div>
+
+            <!--==================== QUALIFICATOIN 3====================-->
+            <div class="qualification__data">
+              <div>
+                <h3 class="qualification__title">Customer Data Specialist</h3>
+                <span class="qualification__subtitle"> Zarrin Roya </span>
+                <div class="qualification__calender">
+                  <i class="uil uil-calendar-alt"></i> 2021-2023
+                </div>
+              </div>
+              <div>
+                <span class="qualification__rounder"></span>
+                <span class="qualification__line"></span>
+              </div>
+            </div>
+
             
           <!--==================== QUALIFICATOIN CONTENT 2====================-->
           <div class="qualification__content" data-content id="education">
