--- a/index.html
+++ b/index.html
@@ -246,99 +246,6 @@
       </div>
     </section>
 
-    <!--==================== Research ====================-->
-
-    <section class="research section" id="research">
-      <h2 class="section__title">Skills</h2>
-      <span class="section__subtitle">My tech stack</span>
-      <div class="research__container container grid">
-        <div class="research__container-box">
-          <img
-            class="research__container-img"
-            src="/assets/img/skills/angular.svg"
-            alt="angular"
-          />
-          <div class="skills__container-name">Angular</div>
-        </div>
-
-        <div class="skills__container-box">
-          <img
-            class="skills__container-img"
-            src="/assets/img/skills/react.svg"
-            alt="react"
-          />
-          <div class="skills__container-name">React</div>
-        </div>
-
-        <div class="skills__container-box">
-          <img
-            class="skills__container-img"
-            src="/assets/img/skills/vue.svg"
-            alt="vue"
-          />
-          <div class="skills__container-name">Vue</div>
-        </div>
-
-        <div class="skills__container-box">
-          <img
-            class="skills__container-img"
-            src="/assets/img/skills/typescript.svg"
-            alt="typescript"
-          />
-          <div class="skills__container-name">TypeScript</div>
-        </div>
-
-        <div class="skills__container-box">
-          <img
-            class="skills__container-img"
-            src="/assets/img/skills/javascript.svg"
-            alt="javascript"
-          />
-          <div class="skills__container-name">JavaScript</div>
-        </div>
-
-        <div class="skills__container-box">
-          <img
-            class="skills__container-img"
-            src="/assets/img/skills/html.svg"
-            alt="html"
-          />
-          <div class="skills__container-name">HTML</div>
-        </div>
-
-        <div class="skills__container-box">
-          <img
-            class="skills__container-img"
-            src="/assets/img/skills/css.svg"
-            alt="css"
-          />
-          <div class="skills__container-name">CSS</div>
-        </div>
-
-        <div class="skills__container-box">
-          <img
-            class="skills__container-img"
-            src="/assets/img/skills/sass.svg"
-            alt="sass"
-          />
-          <div class="skills__container-name">SASS</div>
-        </div>
-
-        <div class="skills__container-box">
-          <img
-            class="skills__container-img"
-            src="/assets/img/skills/firebase.svg"
-            alt="firebase"
-          />
-          <div class="skills__container-name">Firebase</div>
-        </div>
-
-        <!-- <div class="skills__container-box">
-                <img class="skills__container-img" src="/assets/img/skills/figma.svg" alt="figma">
-                <div class="skills__container-name">Figma</div>
-            </div> -->
-      </div>
-    </section>
 
     <!--==================== QUALIFICATOIN ====================-->
 
@@ -457,12 +364,106 @@
         </div>
       </div>
     </section>
+    
+    <!--==================== Research ====================-->
+
+    <section class="research section" id="research">
+      <h2 class="section__title">Research</h2>
+      <span class="section__subtitle">My </span>
+      <div class="research__container container grid">
+        <div class="research__container-box">
+          <img
+            class="research__container-img"
+            src="/assets/img/skills/angular.svg"
+            alt="angular"
+          />
+          <div class="skills__container-name">Angular</div>
+        </div>
+
+        <div class="skills__container-box">
+          <img
+            class="skills__container-img"
+            src="/assets/img/skills/react.svg"
+            alt="react"
+          />
+          <div class="skills__container-name">React</div>
+        </div>
+
+        <div class="skills__container-box">
+          <img
+            class="skills__container-img"
+            src="/assets/img/skills/vue.svg"
+            alt="vue"
+          />
+          <div class="skills__container-name">Vue</div>
+        </div>
+
+        <div class="skills__container-box">
+          <img
+            class="skills__container-img"
+            src="/assets/img/skills/typescript.svg"
+            alt="typescript"
+          />
+          <div class="skills__container-name">TypeScript</div>
+        </div>
+
+        <div class="skills__container-box">
+          <img
+            class="skills__container-img"
+            src="/assets/img/skills/javascript.svg"
+            alt="javascript"
+          />
+          <div class="skills__container-name">JavaScript</div>
+        </div>
+
+        <div class="skills__container-box">
+          <img
+            class="skills__container-img"
+            src="/assets/img/skills/html.svg"
+            alt="html"
+          />
+          <div class="skills__container-name">HTML</div>
+        </div>
+
+        <div class="skills__container-box">
+          <img
+            class="skills__container-img"
+            src="/assets/img/skills/css.svg"
+            alt="css"
+          />
+          <div class="skills__container-name">CSS</div>
+        </div>
+
+        <div class="skills__container-box">
+          <img
+            class="skills__container-img"
+            src="/assets/img/skills/sass.svg"
+            alt="sass"
+          />
+          <div class="skills__container-name">SASS</div>
+        </div>
+
+        <div class="skills__container-box">
+          <img
+            class="skills__container-img"
+            src="/assets/img/skills/firebase.svg"
+            alt="firebase"
+          />
+          <div class="skills__container-name">Firebase</div>
+        </div>
+
+        <!-- <div class="skills__container-box">
+                <img class="skills__container-img" src="/assets/img/skills/figma.svg" alt="figma">
+                <div class="skills__container-name">Figma</div>
+            </div> -->
+      </div>
+    </section>
 
     <!--==================== Teaching ====================-->
 
     <section class="teaching section" id="teaching">
       <h2 class="section__title">Teaching</h2>
-      <span class="section__subtitle">Most recent work</span>
+      <span class="section__subtitle">Most</span>
 
       <div class="teaching__container container swiper-container">
         <div class="swiper-wrapper">
@@ -667,7 +668,7 @@
               <a href="#teaching" class="footer__link">Teaching</a>
             </li>
             <li>
-              <a href="#contact" class="footer__link">Contact Me</a>
+              <a href="#contact" class="footer__link">Contact</a>
             </li>
           </ul>
 
