--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
             <li class="nav__item">
               <a href="#contact" class="nav__link noSelect">
-                <i class="uil uil-message nav__icon"></i> Contact Me
+                <i class="uil uil-message nav__icon"></i> Contact
               </a>
             </li>
           </ul>
@@ -251,7 +251,7 @@
 
     <section class="qualification section">
       <h2 class="section__title">Qualification</h2>
-      <span class="section__subtitle">Academic and Professional</span>
+      <span class="section__subtitle">My personal journey</span>
 
       <div class="qualification__container container">
         <div class="qualification__tabs">
@@ -281,10 +281,10 @@
             <!--==================== QUALIFICATOIN 1====================-->
             <div class="qualification__data">
               <div>
-                <h3 class="qualification__title">Data Science Senior Specialist</h3>
-                <span class="qualification__subtitle"> Zarrin Roya </span>
+                <h3 class="qualification__title">Software Engineer</h3>
+                <span class="qualification__subtitle"> Tech Mahindra </span>
                 <div class="qualification__calender">
-                  <i class="uil uil-calendar-alt"></i> 2023-2024
+                  <i class="uil uil-calendar-alt"></i> 2015-2018
                 </div>
               </div>
 
@@ -302,10 +302,10 @@
                 <span class="qualification__line"></span>
               </div>
               <div>
-                <h3 class="qualification__title">Statistics & Machine Learning Instructor</h3>
-                <span class="qualification__subtitle"> learnix.ir </span>
+                <h3 class="qualification__title">Frontend Developer</h3>
+                <span class="qualification__subtitle"> Mobikasa </span>
                 <div class="qualification__calender">
-                  <i class="uil uil-calendar-alt"></i> 2022-2023
+                  <i class="uil uil-calendar-alt"></i> 2018-2019
                 </div>
               </div>
             </div>
@@ -313,18 +313,35 @@
             <!--==================== QUALIFICATOIN 3====================-->
             <div class="qualification__data">
               <div>
-                <h3 class="qualification__title">Customer Data Specialist</h3>
-                <span class="qualification__subtitle"> Zarrin Roya </span>
+                <h3 class="qualification__title">Lead Engineer</h3>
+                <span class="qualification__subtitle"> HCL </span>
                 <div class="qualification__calender">
-                  <i class="uil uil-calendar-alt"></i> 2021-2023
+                  <i class="uil uil-calendar-alt"></i> 2019-2020
                 </div>
               </div>
               <div>
                 <span class="qualification__rounder"></span>
+                <span class="qualification__line"></span>
               </div>
             </div>
 
-            
+            <!--==================== QUALIFICATOIN 4====================-->
+            <div class="qualification__data">
+              <div></div>
+              <div>
+                <span class="qualification__rounder"></span>
+                <!-- <span class="qualification__line"></span> -->
+              </div>
+              <div>
+                <h3 class="qualification__title">UI/UX Engineer</h3>
+                <span class="qualification__subtitle"> Rakuten </span>
+                <div class="qualification__calender">
+                  <i class="uil uil-calendar-alt"></i> 2020-2023
+                </div>
+              </div>
+            </div>
+          </div>
+
           <!--==================== QUALIFICATOIN CONTENT 2====================-->
           <div class="qualification__content" data-content id="education">
             <!--==================== QUALIFICATOIN 1====================-->
