--- a/index.html
+++ b/index.html
@@ -251,23 +251,24 @@
 
     <section class="qualification section">
       <h2 class="section__title">Qualification</h2>
-      <span class="section__subtitle">My personal journey</span>
+      <span class="section__subtitle"> .. </span>
 
       <div class="qualification__container container">
         <div class="qualification__tabs">
           <div
             class="qualification__button button--flex qualification__active"
-            data-target="#work"
-          >
-            <i class="uil uil-briefcase-alt qualification__icon"> </i> Work
-          </div>
-
-          <div
-            class="qualification__button button--flex"
             data-target="#education"
           >
             <i class="uil uil-graduation-cap qualification__icon"> </i>
             Education
+            
+          </div>
+
+          <div
+            class="qualification__button button--flex"
+            data-target="#work"
+          >
+            <i class="uil uil-briefcase-alt qualification__icon"> </i> Work
           </div>
         </div>
 
@@ -276,7 +277,7 @@
           <div
             class="qualification__content qualification__active"
             data-content
-            id="work"
+            id="education"
           >
             <!--==================== QUALIFICATOIN 1====================-->
             <div class="qualification__data">
@@ -343,7 +344,7 @@
           </div>
 
           <!--==================== QUALIFICATOIN CONTENT 2====================-->
-          <div class="qualification__content" data-content id="education">
+          <div class="qualification__content" data-content id="work">
             <!--==================== QUALIFICATOIN 1====================-->
             <div class="qualification__data">
               <div>
