--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             data-target="#education"
           >
             <i class="uil uil-graduation-cap qualification__icon"> </i>
-            Education
+            Academic
             
           </div>
 
@@ -268,7 +268,7 @@
             class="qualification__button button--flex"
             data-target="#work"
           >
-            <i class="uil uil-briefcase-alt qualification__icon"> </i> Work
+            <i class="uil uil-briefcase-alt qualification__icon"> </i> Professional
           </div>
         </div>
 
@@ -282,10 +282,10 @@
             <!--==================== QUALIFICATOIN 1====================-->
             <div class="qualification__data">
               <div>
-                <h3 class="qualification__title">Software Engineer</h3>
-                <span class="qualification__subtitle"> Tech Mahindra </span>
+                <h3 class="qualification__title">M.Sc. in Epidemiology</h3>
+                <span class="qualification__subtitle"> Ludwig Maximilian University of Munich </span>
                 <div class="qualification__calender">
-                  <i class="uil uil-calendar-alt"></i> 2015-2018
+                  <i class="uil uil-calendar-alt"></i> 2024-Now
                 </div>
               </div>
 
@@ -303,10 +303,10 @@
                 <span class="qualification__line"></span>
               </div>
               <div>
-                <h3 class="qualification__title">Frontend Developer</h3>
-                <span class="qualification__subtitle"> Mobikasa </span>
+                <h3 class="qualification__title">M.Sc. in Statistics</h3>
+                <span class="qualification__subtitle"> Shahid Beheshti University </span>
                 <div class="qualification__calender">
-                  <i class="uil uil-calendar-alt"></i> 2018-2019
+                  <i class="uil uil-calendar-alt"></i> 2013-2016
                 </div>
               </div>
             </div>
@@ -314,10 +314,10 @@
             <!--==================== QUALIFICATOIN 3====================-->
             <div class="qualification__data">
               <div>
-                <h3 class="qualification__title">Lead Engineer</h3>
-                <span class="qualification__subtitle"> HCL </span>
+                <h3 class="qualification__title">B.Sc. in Statistics</h3>
+                <span class="qualification__subtitle"> Shahid Chamran University </span>
                 <div class="qualification__calender">
-                  <i class="uil uil-calendar-alt"></i> 2019-2020
+                  <i class="uil uil-calendar-alt"></i> 2009-2013
                 </div>
               </div>
               <div>
@@ -337,10 +337,10 @@
                 <span class="qualification__line"></span>
               </div>
               <div>
-                <h3 class="qualification__title">Frontend Developer</h3>
-                <span class="qualification__subtitle"> Mobikasa </span>
+                <h3 class="qualification__title">Data Science Senior Specialist</h3>
+                <span class="qualification__subtitle"> Zarrin Roya </span>
                 <div class="qualification__calender">
-                  <i class="uil uil-calendar-alt"></i> 2018-2019
+                  <i class="uil uil-calendar-alt"></i> 2023-2024
                 </div>
               </div>
             </div>
@@ -348,12 +348,12 @@
             <!--==================== QUALIFICATOIN 2====================-->
             <div class="qualification__data">
               <div>
-                <h3 class="qualification__title">HSC, Science</h3>
+                <h3 class="qualification__title">Statistics & Machine Learning Instructor</h3>
                 <span class="qualification__subtitle">
-                  St. Mary's Academy
+                   learnix.ir 
                 </span>
                 <div class="qualification__calender">
-                  <i class="uil uil-calendar-alt"></i> 2009-2011
+                  <i class="uil uil-calendar-alt"></i> 2022-2023
                 </div>
               </div>
 
@@ -371,10 +371,10 @@
                 <!-- <span class="qualification__line"></span> -->
               </div>
               <div>
-                <h3 class="qualification__title">B.Tech, Electronics</h3>
-                <span class="qualification__subtitle"> Sharda University </span>
+                <h3 class="qualification__title">Customer Data Specialist</h3>
+                <span class="qualification__subtitle"> Zarrin Roya </span>
                 <div class="qualification__calender">
-                  <i class="uil uil-calendar-alt"></i> 2011-2015
+                  <i class="uil uil-calendar-alt"></i> 2021-2023
                 </div>
               </div>
             </div>
