--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             <!--==================== QUALIFICATOIN 2====================-->
             <div class="qualification__data">
               <div>
-                <h3 class="qualification__title">Statistics & Machine Learning Instructor</h3>
+                <h3 class="qualification__title">Statistics and Machine Learning Instructor</h3>
                 <span class="qualification__subtitle">
                    learnix.ir 
                 </span>
