--- a/index.html
+++ b/index.html
@@ -326,33 +326,16 @@
 
 
           <!--==================== QUALIFICATOIN CONTENT 2====================-->
-          <div class="qualification__content" data-content id="work">
-
+          <div class="qualification__content" data-content id="education">
             <!--==================== QUALIFICATOIN 1====================-->
             <div class="qualification__data">
-              <div></div>
               <div>
-                <span class="qualification__rounder"></span>
-                <span class="qualification__line"></span>
-              </div>
-              <div>
-                <h3 class="qualification__title">Data Science Senior Specialist</h3>
-                <span class="qualification__subtitle"> Zarrin Roya </span>
-                <div class="qualification__calender">
-                  <i class="uil uil-calendar-alt"></i> 2023-2024
-                </div>
-              </div>
-            </div>
-            
-            <!--==================== QUALIFICATOIN 2====================-->
-            <div class="qualification__data">
-              <div>
-                <h3 class="qualification__title">Statistics and Machine Learning Instructor</h3>
+                <h3 class="qualification__title">HSC, Science</h3>
                 <span class="qualification__subtitle">
-                   learnix.ir 
+                  St. Mary's Academy
                 </span>
                 <div class="qualification__calender">
-                  <i class="uil uil-calendar-alt"></i> 2022-2023
+                  <i class="uil uil-calendar-alt"></i> 2009-2011
                 </div>
               </div>
 
@@ -362,7 +345,7 @@
               </div>
             </div>
 
-            <!--==================== QUALIFICATOIN 3====================-->
+            <!--==================== QUALIFICATOIN 2====================-->
             <div class="qualification__data">
               <div></div>
               <div>
@@ -370,10 +353,10 @@
                 <!-- <span class="qualification__line"></span> -->
               </div>
               <div>
-                <h3 class="qualification__title">Customer Data Specialist</h3>
-                <span class="qualification__subtitle"> Zarrin Roya </span>
+                <h3 class="qualification__title">B.Tech, Electronics</h3>
+                <span class="qualification__subtitle"> Sharda University </span>
                 <div class="qualification__calender">
-                  <i class="uil uil-calendar-alt"></i> 2021-2023
+                  <i class="uil uil-calendar-alt"></i> 2011-2015
                 </div>
               </div>
             </div>
