--- a/index.html
+++ b/index.html
@@ -326,16 +326,16 @@
 
 
           <!--==================== QUALIFICATOIN CONTENT 2====================-->
-          <div class="qualification__content" data-content id="education">
+          <div class="qualification__content" data-content id="work">
             <!--==================== QUALIFICATOIN 1====================-->
             <div class="qualification__data">
               <div>
-                <h3 class="qualification__title">HSC, Science</h3>
+                <h3 class="qualification__title">Data Science Senior Specialist</h3>
                 <span class="qualification__subtitle">
-                  St. Mary's Academy
+                  Zarrin Roya
                 </span>
                 <div class="qualification__calender">
-                  <i class="uil uil-calendar-alt"></i> 2009-2011
+                  <i class="uil uil-calendar-alt"></i> 2021-2024
                 </div>
               </div>
 
@@ -353,10 +353,10 @@
                 <!-- <span class="qualification__line"></span> -->
               </div>
               <div>
-                <h3 class="qualification__title">B.Tech, Electronics</h3>
-                <span class="qualification__subtitle"> Sharda University </span>
+                <h3 class="qualification__title">Statistics and Machine Learning Instructor</h3>
+                <span class="qualification__subtitle"> Learnix </span>
                 <div class="qualification__calender">
-                  <i class="uil uil-calendar-alt"></i> 2011-2015
+                  <i class="uil uil-calendar-alt"></i> 2022-2023
                 </div>
               </div>
             </div>
