--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
             </div>
           </div>
           <div class="contact__content">
-            <label for="" class="contact__label">Project</label>
+            <label for="" class="contact__label">Topic</label>
             <input type="text" class="contact__input" />
           </div>
           <div class="contact__content">
@@ -513,7 +513,7 @@
           </div>
         </div>
 
-        <p class="footer__copy">&#169; Animesh Rawat. All rights reserved.</p>
+        <p class="footer__copy">&#169; Alireza Ghorbani. All rights reserved.</p>
       </div>
     </footer>
 
