--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                 <span class="qualification__rounder"></span>
               </div>
             </div>
-
+          </div>
 
           <!--==================== QUALIFICATOIN CONTENT 2====================-->
           <div class="qualification__content" data-content id="work">
