--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                   Zarrin Roya
                 </span>
                 <div class="qualification__calender">
-                  <i class="uil uil-calendar-alt"></i> 2021-2024
+                  <i class="uil uil-calendar-alt"></i> 2023-2024
                 </div>
               </div>
 
@@ -350,7 +350,7 @@
               <div></div>
               <div>
                 <span class="qualification__rounder"></span>
-                <!-- <span class="qualification__line"></span> -->
+                <span class="qualification__line"></span>
               </div>
               <div>
                 <h3 class="qualification__title">Statistics and Machine Learning Instructor</h3>
@@ -360,6 +360,21 @@
                 </div>
               </div>
             </div>
+
+            <!--==================== QUALIFICATOIN 3====================-->
+            <div class="qualification__data">
+              <div>
+                <h3 class="qualification__title">Consumer Data Analyst</h3>
+                <span class="qualification__subtitle"> Zarrin Roya </span>
+                <div class="qualification__calender">
+                  <i class="uil uil-calendar-alt"></i> 2021-2023
+                </div>
+              </div>
+              <div>
+                <span class="qualification__rounder"></span>
+              </div>
+            </div>
+      
           </div>
         </div>
       </div>
