--- a/index.html
+++ b/index.html
@@ -214,23 +214,21 @@
 
     <section class="about section" id="about">
       <h2 class="section__title">About Me</h2>
-      <span class="section__subtitle">My Introduction</span>
 
       <div class="about__container container">
 
         <div class="about__data">
           <p class="about__description">
-            I have 8 years of experience and a deep understanding of various web
-            technologies such as HTML, CSS, JavaScript, TypeScript, Angular,
-            MEAN, Vue.js, and React. <br />
-            I am dedicated to keeping up with the latest trends and techniques
-            in web development, and I am constantly learning and expanding my
-            skill set. I have a keen eye for detail and strive for perfection in
-            every project I work on. <br />
-            When I'm not coding, I enjoy exploring new technologies and work on
-            side projects. I am a sports enthusiast. I play basketball and go to
-            practice regularly. I am also a big football fan and my favourite
-            club is Arsenal.
+            I’m a master's student in Epidemiology at Ludwig Maximilian University of Munich. 
+            <br><br>
+            My research interests are:
+            <ul>
+              <li>Statistical machine learning </li>
+              <li>High-dimensional statistics</li>
+              <li>Biostatistics</li>
+              <li>Neural Networks</li>
+            </ul>
+            
           </p>
 
           <div class="about__buttons">
@@ -354,7 +352,7 @@
               </div>
               <div>
                 <h3 class="qualification__title">Statistics and Machine Learning Instructor</h3>
-                <span class="qualification__subtitle"> Learnix </span>
+                <span class="qualification__subtitle"> Learnix.ir </span>
                 <div class="qualification__calender">
                   <i class="uil uil-calendar-alt"></i> 2022-2023
                 </div>
