--- a/index.html
+++ b/index.html
@@ -219,15 +219,17 @@
 
         <div class="about__data">
           <p class="about__description">
-            I’m a master's student in Epidemiology at Ludwig Maximilian University of Munich. 
-            <br><br>
-            My research interests are:
-            <ul>
-              <li>Statistical machine learning </li>
-              <li>High-dimensional statistics</li>
-              <li>Biostatistics</li>
-              <li>Neural Networks</li>
-            </ul>
+            
+            M.Sc. student in Epidemiology at Ludwig Maximilian University of Munich
+
+            Research Interests:
+
+             - Biostatistics  
+             - Statistical machine learning 
+             - High-dimensional statistics
+             - Bayesian Statistics
+             - Neural Networks
+
             
           </p>
 
