--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     <!--==================== ABOUT ====================-->
 
     <section class="about section" id="about">
-      <h2 class="section__title">About Me</h2>
+      <h2 class="section__title">About</h2>
 
       <div class="about__container container">
 
