--- a/index.html
+++ b/index.html
@@ -370,17 +370,33 @@
 
     <section class="research section" id="research">
       <h2 class="section__title">Research</h2>
-      <span class="section__subtitle">My </span>
+      <span class="section__subtitle"> </span>
       <div class="research__container container ">
         <div class="research__data">
-          <p class="about__description">
+          <p class="research__description">
 
-            Research Interests:<br />
+            # Research Interests:<br />
              - Biostatistics<br />
              - Statistical machine learning <br />
              - High-dimensional statistics<br />
              - Bayesian Statistics<br />
              - Neural Networks<br />
+
+            # Software:<br />
+              - QUADRO: Code for high dimensional quadratic classification method proposed in the paper "QUADRO: A Supervised Dimension Reduction Method Via Rayleigh Quotient Optimization (2015)" in R.<br />
+              - [ROAD](https://github.com/alcstat/road_in_r): Code for high dimensional  classification method proposed in  the paper "A ROAD to Classification in High Dimensional Space (2010)" in R.<br />
+
+            # Papers and Preprints:<br />
+              ## 2024+<br />
+                - Ghorbani, A. Khajehzadeh, M. Seifi, F. Al-Ansari, N and Shahabi, H. (2023+).<br />
+                Optimizing Water Pipeline Route Selection Using a Sparse Deep Neural Network and the Fuzzy VIKOR Method (case study: water pipeline transmission)<br />
+                ([Under-Review](files/snn_mcdm.pdf), code) .<br />
+
+              ## 2024<br />
+                 - Khajehzadeh, M. Pazhuheian, Ghorbani, A. F. Seifi, F. Madrakid, G. (2024).<br />
+                  Longitudinal Supply Chain Monitoring using Generalized estimating equation and Joint Optimization method (A case study in the Personal Care Industry) .<br />
+
+            
           </p>
         </div>
       </div>
@@ -390,7 +406,15 @@
 
     <section class="teaching section" id="teaching">
       <h2 class="section__title">Teaching</h2>
-      <span class="section__subtitle">Most</span>
+      <span class="section__subtitle"> </span>
+        <div class="teaching__container container ">
+          <div class="teaching__data">
+            <p class="teaching__description">
+
+            ### (2022) Machine Learning with R - Learnix.ir:<br />
+            - Introduction to R programming language (in Persian - [link](https://learnix.ir/courses/course-v1:Learnix+lrnx-courses-254+V1/about)).<br />
+            - Introduction to statistics with R (in Persian).<br />
+            - R for Machine Learning (in Persian).<br />
 
     </section>
 
