--- a/index.html
+++ b/index.html
@@ -489,22 +489,10 @@
       <div class="footer__bg">
         <div class="footer__container container grid">
           <div>
-            <h1 class="footer__title">Alireza Ghorbani</h1>
-            <span class="footer__subtitle">LMU Munich</span>
+            <h1 class="footer__title">LMU Munich, IBE</h1>
+            <span class="footer__subtitle">Oct 2024</span>
           </div>
-
-          <ul class="footer__links">
-            <li>
-              <a href="#research" class="footer__link">Research</a>
-            </li>
-            <li>
-              <a href="#teaching" class="footer__link">Teaching</a>
-            </li>
-            <li>
-              <a href="#contact" class="footer__link">Contact</a>
-            </li>
-          </ul>
-
+          
           <div class="footer__socials">
             <a
               href="https://www.linkedin.com/in/ghorbanialireza/"
