--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 target="_blank"
                 class="home__social-icon"
               >
-                <i class="uil uil-google-scholar"></i>
+                <i class="fa-brands fa-google-scholar"></i> <!-- Font Awesome Google Icon -->
               </a>
 
               <a
@@ -169,7 +169,7 @@
                 target="_blank"
                 class="home__social-icon"
               >
-                <i class="uil uil-researchgate"></i>
+                <i class="fab fa-researchgate"></i> <!-- Font Awesome ResearchGate Icon -->
               </a>
             </div>
 
@@ -486,7 +486,7 @@
               target="_blank"
               class="footer__social"
             >
-              <i class="fab fa-google"></i> <!-- Font Awesome Google Icon -->
+              <i class="fa-brands fa-google-scholar"></i> <!-- Font Awesome Google Icon -->
             </a>
             
 
