--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 target="_blank"
                 class="home__social-icon"
               >
-                <i class="fa-brands fa-google-scholar"></i> <!-- Font Awesome Google Icon -->
+                <i class="fa-brands fa-google"></i> <!-- Font Awesome Google Icon -->
               </a>
 
               <a
@@ -424,36 +424,6 @@
 
     </section>
 
-    <!--==================== CONTACT ME ====================-->
-
-    <section class="contact section" id="contact">
-      <h2 class="section__title">Contact Me</h2>
-      <span class="section__subtitle">Get in touch</span>
-
-      <div class="contact__container container grid">
-        <div>
-
-          <div class="contact__information">
-            <i class="uil uil-envelope contact__icon"></i>
-
-            <div>
-              <h3 class="contact__title">Email</h3>
-              <span class="contact__subtitle">alireza.ghorbani@campus.lmu.de</span>
-            </div>
-          </div>
-
-          <div class="contact__information">
-            <i class="uil uil-map-marker contact__icon"></i>
-
-            <div>
-              <h3 class="contact__title">Location</h3>
-              <span class="contact__subtitle">Muncih, Germany</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
     <!--==================== FOOTER ====================-->
 
     <footer class="footer">
@@ -486,7 +456,15 @@
               target="_blank"
               class="footer__social"
             >
-              <i class="fa-brands fa-google-scholar"></i> <!-- Font Awesome Google Icon -->
+              <i class="fa-brands fa-google"></i> <!-- Font Awesome Google Icon -->
+            </a>
+
+            <a
+              href="https://scholar.google.com/citations?user=RoWUdywAAAAJ&hl=en"
+              target="_blank"
+              class="footer__social"
+            >
+              <i class="fa-brands fa-google"></i> <!-- Font Awesome Google Icon -->
             </a>
             
 
@@ -497,9 +475,17 @@
             >
               <i class="fab fa-researchgate"></i> <!-- Font Awesome ResearchGate Icon -->
             </a>
+
+            <a
+              href="mailto:alireza.ghorbani@campus.lmu.de"
+              target="_blank"
+              class="footer__social"
+            >
+              <i class="fab fa-envelope"></i> <!-- Font Awesome ResearchGate Icon -->
+            </a>
+            
           </div>
         </div>
-
         <p class="footer__copy">&#169; Alireza Ghorbani. All rights reserved.</p>
       </div>
     </footer>
