--- a/index.html
+++ b/index.html
@@ -224,7 +224,6 @@
       <div class="about__container container">
 
         <div class="about__data">
-          
           <div class="about__buttons">
             <a
               download=""
@@ -234,6 +233,16 @@
               Download CV<i class="uil uil-download-alt button__icon"></i
             ></a>
           </div>
+
+          <div class="contact__information">
+            <i class="uil uil-envelope contact__icon"></i>
+
+            <div>
+              <h3 class="contact__title">Email</h3>
+              <span class="contact__subtitle">animesh.rawat20@gmail.com</span>
+            </div>
+          </div>
+          
         </div>
       </div>
     </section>
