--- a/index.html
+++ b/index.html
@@ -210,6 +210,8 @@
               <p class="home__description">
                 The Institute for Medical Information Processing, Biometry, and Epidemiology
               </p>
+              <h3 class="contact__title">Email</h3>
+                <span class="contact__subtitle">ghorbani.alireza@campus,lu,de</span>
             </div>
           </div>
         </div>
@@ -237,15 +239,7 @@
               ></a>
             </div>
           
-            <!-- Contact Information Section -->
-            <div class="contact__information">
-              <i class="uil uil-envelope contact__icon"></i>
-
-              <div>
-                <h3 class="contact__title">Email</h3>
-                <span class="contact__subtitle">animesh.rawat20@gmail.com</span>
-              </div>
-            </div>
+            
           </div>
         </div>
       </div>
