--- a/index.html
+++ b/index.html
@@ -349,9 +349,12 @@
             </div>
       
           </div>
-
+        </div>
         <!-- Download CV Section -->
         <div class="about__buttons">
+          <p class="home__description">
+             Here you can download my CV:
+          </p>
           <a
             download=""
             href="assets/pdf/CV.pdf"
@@ -359,7 +362,6 @@
           >
             Download CV<i class="uil uil-download-alt button__icon"></i
           ></a>
-        </div>
         </div>
       </div>
     </section>
@@ -449,16 +451,7 @@
               class="footer__social"
             >
               <i class="fa-brands fa-google"></i> <!-- Font Awesome Google Icon -->
-            </a>
-
-            <a
-              href="https://scholar.google.com/citations?user=RoWUdywAAAAJ&hl=en"
-              target="_blank"
-              class="footer__social"
-            >
-              <i class="fa-brands fa-google"></i> <!-- Font Awesome Google Icon -->
-            </a>
-            
+            </a>            
 
             <a
               href="https://www.researchgate.net/profile/Alireza-Ghorbani-3"
