--- a/index.html
+++ b/index.html
@@ -223,9 +223,24 @@
     <!--==================== QUALIFICATOIN ====================-->
 
     <section class="qualification section">
-      <h2 class="section__title">Qualification</h2>
+      <h2 class="section__title">Curriculum Vitae</h2>
 
       <div class="qualification__container container">
+
+        <!-- Download CV Section -->
+        <div class="about__buttons">
+          <p class="home__description">
+             Here you can download my CV:
+          </p>
+          <a
+            download=""
+            href="assets/pdf/CV.pdf"
+            class="button button--flex"
+          >
+            Download CV<i class="uil uil-download-alt button__icon"></i
+          ></a>
+        </div>
+        
         <div class="qualification__tabs">
           <div
             class="qualification__button button--flex qualification__active"
@@ -349,19 +364,6 @@
             </div>
       
           </div>
-        </div>
-        <!-- Download CV Section -->
-        <div class="about__buttons">
-          <p class="home__description">
-             Here you can download my CV:
-          </p>
-          <a
-            download=""
-            href="assets/pdf/CV.pdf"
-            class="button button--flex"
-          >
-            Download CV<i class="uil uil-download-alt button__icon"></i
-          ></a>
         </div>
       </div>
     </section>
