--- a/index.html
+++ b/index.html
@@ -223,15 +223,12 @@
 
         <!-- Download CV Section -->
         <div class="about__buttons">
-          <p class="home__description">
-             Here you can download my CV:
-          </p>
           <a
             download=""
             href="assets/pdf/CV.pdf"
             class="button button--flex"
           >
-            Download CV<i class="uil uil-download-alt button__icon"></i
+            CV<i class="uil uil-download-alt button__icon"></i
           ></a>
         </div>
         
