--- a/index.html
+++ b/index.html
@@ -397,7 +397,6 @@
             Longitudinal Supply Chain Monitoring using Generalized estimating equation and Joint Optimization method (A case study in the Personal Care Industry).
           </li>
         </ul>
-        
       </div>
 
       
@@ -405,8 +404,12 @@
       <div class="research__section">
         <h3 class="research__heading">Software</h3>
         <ul class="research__list">
-          <li>QUADRO: Code for high dimensional quadratic classification method proposed in the paper "QUADRO: A Supervised Dimension Reduction Method Via Rayleigh Quotient Optimization (2015)" in R.</li>
-          <li><a href="https://github.com/alcstat/road_in_r" target="_blank">ROAD</a>: Code for high dimensional classification method proposed in the paper "A ROAD to Classification in High Dimensional Space (2010)" in R.</li>
+          <li>
+            QUADRO: Code for high-dimensional quadratic classification method proposed in the paper "QUADRO: A Supervised Dimension Reduction Method Via Rayleigh Quotient Optimization (2015)" in R.
+          </li>
+          <li>
+            <a href="https://github.com/alcstat/road_in_r" target="_blank">ROAD</a>: Code for high-dimensional classification method proposed in the paper "A ROAD to Classification in High Dimensional Space (2010)" in R.
+          </li>
         </ul>
       </div>
 
