--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
             <div class="home__data">
               <h1 class="home__title">Alireza Ghorbani</h1>
-              <h3 class="home__subtitle">Ludwig Maximilian University of Munich</h3>
+              <h3 class="home__subtitle">Ludwig Maximilian University</h3>
               <p class="home__description">
                 The Institute for Medical Information Processing, Biometry, and Epidemiology
               </p>
@@ -440,7 +440,7 @@
         <div class="footer__container container grid">
           <div>
             <h1 class="footer__title">Oct 2024</h1>
-            <span class="footer__subtitle">LMU Munich, IBE</span>
+            <span class="footer__subtitle">Munich, Germany</span>
           </div>
           
           <div class="footer__socials">
