--- a/index.html
+++ b/index.html
@@ -83,48 +83,58 @@
     <link rel="stylesheet" href="assets/css/styles.css" />
 
     <style>
-    /* Research section styling */
+  /* Research section styling */
+  .research__heading {
+    font-size: 1.25rem;
+    margin-top: 1.5rem;
+    font-weight: bold;
+    color: #333; /* Default color for light mode */
+  }
+
+  .research__subheading {
+    font-size: 1.1rem;
+    margin-top: 1rem;
+    font-weight: 600;
+    color: #555; /* Default color for light mode */
+  }
+
+  /* Dark mode styles */
+  @media (prefers-color-scheme: dark) {
     .research__heading {
-      font-size: 1.25rem;
-      margin-top: 1.5rem;
-      font-weight: bold;
-      color: #333;
+      color: #e0e0e0; /* Light gray for dark mode */
     }
 
     .research__subheading {
-      font-size: 1.1rem;
-      margin-top: 1rem;
-      font-weight: 600;
-      color: #555;
+      color: #ccc; /* Slightly darker gray for subheadings in dark mode */
     }
+  }
 
-    .research__section {
-      margin-bottom: 2rem; /* Space between sections */
-    }
+  .research__section {
+    margin-bottom: 2rem; /* Space between sections */
+  }
 
-    .research__list {
-      list-style-type: disc;
-      padding-left: 1.5rem;
-      margin: 0.5rem 0 1.5rem 0;
-    }
+  .research__list {
+    list-style-type: disc;
+    padding-left: 1.5rem;
+    margin: 0.5rem 0 1.5rem 0;
+  }
 
-    .research__list li {
-      margin: 0.3rem 0;
-      line-height: 1.6;
-    }
+  .research__list li {
+    margin: 0.3rem 0;
+    line-height: 1.6;
+  }
 
-    .research__section a {
-      color: #0073e6;
-      text-decoration: underline;
-    }
+  .research__section a {
+    color: #0073e6;
+    text-decoration: underline;
+  }
 
-    .research__section a:hover {
-      text-decoration: none;
-      color: #005bb5;
-    }
+  .research__section a:hover {
+    text-decoration: none;
+    color: #005bb5;
+  }
 </style>
 
-    
   </head>
 
   
