--- a/index.html
+++ b/index.html
@@ -474,10 +474,21 @@
   <div class="teaching__container container">
     <div class="teaching__data">
       <p class="teaching__description">
-        ### (2022) Machine Learning with R - Learnix.ir:<br />
-        - Introduction to R programming language (in Persian - [link](https://learnix.ir/courses/course-v1:Learnix+lrnx-courses-254+V1/about)).<br />
-        - Introduction to statistics with R (in Persian).<br />
-        - R for Machine Learning (in Persian).<br />
+        <h3 class="research__heading">(2022) Machine Learning with R (in Persian) - Learnix.ir</h3>
+        <ul class="research__list">
+          <li>
+            Introduction to R programming language ([<a href="https://learnix.ir/courses/course-v1:Learnix+lrnx-courses-254+V1/about" target="_blank">link</a>]
+          </li>
+          <li>
+            Introduction to statistics with R.
+          </li>
+          <li>
+            R for Machine Learning.
+          </li>
+        </ul>
+
+        - <br />
+        - <br />
       </p>
     </div>
   </div>
