--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
         <h3 class="research__heading">(2022) Machine Learning with R (in Persian) - Learnix.ir</h3>
         <ul class="research__list">
           <li>
-            Introduction to R programming language ([<a href="https://learnix.ir/courses/course-v1:Learnix+lrnx-courses-254+V1/about" target="_blank">link</a>]
+            Introduction to R programming language (<a href="https://learnix.ir/courses/course-v1:Learnix+lrnx-courses-254+V1/about" target="_blank">link</a>)
           </li>
           <li>
             Introduction to statistics with R.
