--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
             </a>
           </div>
         </div>
-        <p class="footer__copy">&#169; Alireza Ghorbani. All rights reserved.</p>
+        <p class="footer__copy">&#169;All rights reserved.</p>
       </div>
     </footer>
 
