--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@
 
             <div class="home__data">
               <h1 class="home__title">Alireza Ghorbani</h1>
-              <h3 class="home__subtitle">Ludwig Maximilian University</h3>
+              <h3 class="home__subtitle">Ludwig Maximilian University (LMU Munich)</h3>
               <p class="home__description">
-                The Institute for Medical Information Processing, Biometry, and Epidemiology
+                The Institute for Medical Information Processing, Biometry, and Epidemiology (IBE)
               </p>
               <h3 class="contact__title">Email</h3>
                 <span class="contact__subtitle">ghorbani.alireza@campus.lmu.de</span>
