--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
             <!--==================== QUALIFICATOIN 1====================-->
             <div class="qualification__data">
               <div>
-                <h3 class="qualification__title">Data Science Senior Specialist</h3>
+                <h3 class="qualification__title">Data Science Specialist</h3>
                 <span class="qualification__subtitle">
                   Zarrin Roya
                 </span>
