--- a/index.html
+++ b/index.html
@@ -405,11 +405,9 @@
       <div class="research__section">
         <h3 class="research__heading">Research Interests</h3>
         <ul class="research__list">
-          <li>Biostatistics</li>
-          <li>Statistical machine learning</li>
+          <li>Statistical learning</li>
           <li>High-dimensional statistics</li>
           <li>Bayesian Statistics</li>
-          <li>Neural Networks</li>
         </ul>
       </div>
       
@@ -437,7 +435,8 @@
         <ul class="research__list">
           <li>
             (2024).
-            Longitudinal Supply Chain Monitoring using Generalized estimating equation and Joint Optimization method (A case study in the Personal Care Industry).
+            A Novel Prescriptive Supply Chain Analytics Model for Monitoring the Relationship Between Influential Variables Across the Supply Chain Network
+            (<a href="http://doi.org/10.31387/oscm0590441" target="_blank">DOI</a>).
           </li>
         </ul>
       </div>
