--- a/index.html
+++ b/index.html
@@ -405,8 +405,8 @@
       <div class="research__section">
         <h3 class="research__heading">Research Interests</h3>
         <ul class="research__list">
-          <li>Statistical learning</li>
-          <li>High-dimensional statistics</li>
+          <li>Statistical Learning</li>
+          <li>High-Dimensional Statistics</li>
           <li>Bayesian Statistics</li>
         </ul>
       </div>
