--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
             <!--==================== QUALIFICATOIN 1====================-->
             <div class="qualification__data">
               <div>
-                <h3 class="qualification__title"> Consumer Research Quantitative Researcher</h3>
+                <h3 class="qualification__title"> Senior Quantitative Researcher</h3>
                 <span class="qualification__subtitle">
                   Zarrin Roya
                 </span>
@@ -379,7 +379,7 @@
             <!--==================== QUALIFICATOIN 3====================-->
             <div class="qualification__data">
               <div>
-                <h3 class="qualification__title">Consumer Research Analyst</h3>
+                <h3 class="qualification__title">Junior Quantitative Researcher</h3>
                 <span class="qualification__subtitle"> Zarrin Roya </span>
                 <div class="qualification__calender">
                   <i class="uil uil-calendar-alt"></i> 2021-2023
