--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
       <div class="qualification__container container">
 
-        <!-- Download CV Section -->
+        <!-- Download CV Section 
         <div class="about__buttons">
           <a
             download=""
@@ -266,7 +266,8 @@
           >
             CV<i class="uil uil-download-alt button__icon"></i
           ></a>
-        </div>
+        </div> 
+        -->
         
         <div class="qualification__tabs">
           <div
