--- a/index.html
+++ b/index.html
@@ -236,12 +236,15 @@
 
             <div class="home__data">
               <h1 class="home__title">Alireza Ghorbani</h1>
-              <h3 class="home__subtitle">Ludwig Maximilian University (LMU Munich)</h3>
+              <h3 class="home__subtitle">MSc Student at LMU Munich, Faculty of Medicine, IBE</h3>
               <p class="home__description">
                 The Institute for Medical Information Processing, Biometry, and Epidemiology (IBE)
               </p>
-              <h3 class="contact__title">Email</h3>
-                <span class="contact__subtitle">ghorbani.alireza@campus.lmu.de</span>
+              <div class="contact">
+                <h3 class="contact__title">Contact</h3>
+                <p class="contact__subtitle">GitHub: <a href="https://github.com/ghorbani-alireza" target="_blank">github.com/yourgithubusername</a></p>
+                <p class="contact__subtitle">Email: <a href="mailto:ghorbani.alireza@campus.lmu.de">ghorbani.alireza@campus.lmu.de</a></p>
+              </div>
             </div>
           </div>
         </div>
