--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
               </p>
               <div class="contact">
                 <h3 class="contact__title">Contact</h3>
-                <p class="contact__subtitle">GitHub: <a href="https://github.com/ghorbani-alireza" target="_blank">github.com/yourgithubusername</a></p>
+                <p class="contact__subtitle">GitHub: <a href="https://github.com/ghorbani-alireza" target="_blank">github.com/ghorbani-alireza</a></p>
                 <p class="contact__subtitle">Email: <a href="mailto:ghorbani.alireza@campus.lmu.de">ghorbani.alireza@campus.lmu.de</a></p>
               </div>
             </div>
